...
          ]}
          activeOpacity={1}
          onPress={onClose}
        />

        <Animated.View
          testID="bottom-sheet-frame"
          style={[
            styles.sheet,
            shadowStyle,
            {
              height: isContentHeight ? undefined : sheetHeight,
              maxHeight: isContentHeight ? sheetHeight : undefined,
...
